WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174163
Regression(
r218821
): Bad cast to WebKit::DiagnosticLoggingClient in WKWebView's _setDiagnosticLoggingDelegate
https://bugs.webkit.org/show_bug.cgi?id=174163
Summary
Regression(r218821): Bad cast to WebKit::DiagnosticLoggingClient in WKWebView...
Chris Dumez
Reported
2017-07-05 10:19:02 PDT
Bad cast to WebKit::DiagnosticLoggingClient in WKWebView's _setDiagnosticLoggingDelegate when in a private session.
Attachments
Patch
(19.59 KB, patch)
2017-07-05 12:59 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-07-05 10:19:39 PDT
<
rdar://problem/33067518
>
Chris Dumez
Comment 2
2017-07-05 12:59:29 PDT
Created
attachment 314644
[details]
Patch
Chris Dumez
Comment 3
2017-07-05 13:41:09 PDT
Comment on
attachment 314644
[details]
Patch Clearing flags on attachment: 314644 Committed
r219154
: <
http://trac.webkit.org/changeset/219154
>
Chris Dumez
Comment 4
2017-07-05 13:41:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug